--- a/public/header.html
+++ b/public/header.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">This is the Emix project </a>
+            <a class="navbar-brand" href="#">This is the eMix project </a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
